# lore

./: .env.example  .gitignore  .markdownlint.json  ACAO-NECESSARIA.md  COMANDOS.md  COMMIT_MESSAGE.md  COMO-USAR.md  CONTRIBUTING.md  DEPLOY-GUIDE.md  Dockerfile  Dockerfile.distroless  GENESIS-PROTOCOL.md  LICENSE  Makefile  NEON-CONFIG.md  NEON-SUCESSO.md  PREPARACAO-COMMIT.md  PROXIMOS-PASSOS.md  QUICKSTART.md  RAILWAY-FIX.md  RAILWAY-SETUP.md  RAILWAY-STATUS.md  README.md  RELATORIO-FINAL.md  SECURITY-REPORT-FINAL.md  SETUP-EXTERNO.md  SISTEMA-HIBRIDO-SUCESSO-FINAL.md  WINDOWS-INSTALL.md  agent_001.py  app.json  check-system.sh  check_neon_status.py  check_railway_status.py  continuous_evolution.py  demo_arquitetura_hibrida.py  demo_comprehensive.py  demo_output.txt  diagnostico_universo.py  docker-compose.yml  genesis.py  (+34 more)
.github/workflows/: ci.yml  docker-push.yml.disabled  python-linter.yml
backup/: Cargo.toml.old
backup/src_original/: advanced_launcher.py  agent_dna.py  cloud_deployment_config.py  emotional_economy.py  evolved_agent.py  frugal_agent.py  lib.rs  lib_complex.rs  neural_web.py  population_manager.py  social_network_manager.py  utils.rs
config/: app.json  docker-compose.yml  railway.json
crates/lore-engine/: Cargo.toml  README.md
crates/lore-engine/benches/: genetic_bench.rs  neural_bench.rs
crates/lore-engine/src/: genetic.rs  lib_minimal.rs  types.rs
docs/archive/: COMMIT_MESSAGE.md  NEON-SUCESSO.md  PREPARACAO-COMMIT.md  RAILWAY-FIX.md  RAILWAY-SETUP.md  RESPOSTA-WINDOWS.md
docs/deployment/: DOCKER-CONFIG.md
docs/development/: MIGRACAO-SENTIMENTO.md
docs/internal/: CORRECOES-ESTRUTURAIS-CONCLUIDAS.md  ESTRUTURA-FINAL-LIMPA.md  GITHUB-SYNC-SUCESSO-FINAL.md  MIGRACAO-SENTIMENTO.md  MISSAO-CUMPRIDA-REORGANIZACAO-FINAL.md  PROXIMOS-PASSOS-2025.md  RAIZ-REORGANIZADA-FINAL.md  README-ATUALIZADO-SUCESSO.md  REORGANIZACAO-CONCLUIDA.md  REORGANIZACAO-ESTRUTURA.md  REORGANIZACAO-FINAL-COMPLETA.md  REORGANIZACAO-FINAL-CONCLUIDA.md  SECURITY-REPORT-FINAL.md  WARNINGS-RESOLVIDOS-FINAL.md
docs/project/: ESTRUTURA-RAIZ-FINAL.md
docs/reports/: ANALISE-LINGUAGENS-EVOLUCAO.md  ANALISE-PROXIMOS-PASSOS-COMPLETA.md  ANALISE-ROADMAP-COMPLETA.md  ANALISE-ROBUSTEZ-COMPLETA.md  CORREÇÃO-WARNINGS.md  ELIMINAÇÃO-TOTAL-WARNINGS.md  HYBRID_IMPLEMENTATION_REPORT.md  NEON-CONFIGURATION.md  PRIORIDADE-ALTA-CONCLUIDA.md  RAILWAY-DEPLOY-FINAL.md  RAILWAY-STATUS-ATUAL.md  RECUPERACAO-RAILWAY-NEON.md  RELATORIO-FINAL.md  RESPOSTA-LINGUAGENS-FINAL.md  RESPOSTA-ROBUSTEZ-FINAL.md  RUST-IMPLEMENTATION-FINAL-REPORT.md  RUST-IMPLEMENTATION-SUCCESS.md  SISTEMA-HIBRIDO-SUCESSO-FINAL.md  STATUS-IMPLEMENTACAO-FINAL.md  STATUS-PRODUCAO.md  UNIVERSO-STATUS-COMPLETO.md  VALIDACAO-FINAL-DEPLOY.json  railway-status.json
docs/strategy/: ESTRATEGIA-COMERCIALIZACAO.md  PLANO-EXPANSAO-TECNOLOGICA.md
examples/: final_integration_demo.py  main.py  proximos_passos_2025.py
examples/advanced/: demo_arquitetura_hibrida.py  demo_comprehensive.py  demo_final_hybrid.py
examples/enterprise/: universe_autonomous.py  universe_status_simple.py
infra/: kong.yml
python/: README.md  __init__.py  pyproject.toml  requirements.txt
python/lore_na/: __init__.py  cli.py
scripts/: generate-secrets.py  generate-secrets.sh  security-audit.py
scripts/deployment/: reactivate_railway.sh
scripts/maintenance/: analyze_neon.py  analyze_roadmap_complete.py  benchmark_comparison.py  check_neon_status.py  check_railway_status.py  check_warnings.py  continuous_evolution.py  diagnostico_universo.py  eliminate_warnings.py  implement_error_handling.py  implement_graceful_shutdown.py  implement_monitoring.py  implement_offline_mode.py  initialize_universe.py  main.py  proximos_passos.py  quick_universe_test.py  railway_reactivation.py  recovery_check.py  robust_universe_24_7.py  robustez_analysis.py  start.py  validacao_final_deploy.py  validate_project.py  virtual_society.py
scripts/setup/: cleanup-project.sh  setup.sh
services/agent_runner/: Dockerfile  advanced_launcher.py  agent_name_generator.py  api_server.py  base_agent.py  cloud_deployment_config.py  database_manager.py  emotional_economy.py  final_integration_demo.py  lore_persistent_universe.db-journal  population_manager.py  requirements.txt  sentiment_service.py  test_sentiment_service.py
src/: =3.8  agent.rs  agent_dna.py  agent_name_generator.py  dashboard.py  database_manager.py  evolved_agent.py  main.py  neural.rs  population_manager.py  robustness_config.py  sentiment_service.py  social_agent.py  social_network_manager.py  test_sentiment_libs.py
src/api/: api_server.py  cloud_deployment_config.py  database_manager_fixed.py
src/core/: base_agent.py  neural_web.py
state/: agents_state.json  robust_system_state.json  system_state.json  universe_state.json
tests/integration/: test_autonomous_simple.py  test_complete_success.py  test_final_success.py  test_genetic_complete.py  test_hybrid.py  test_hybrid_final.py  (+4 more)
tools/: .pylanceignore  check_errors.py  check_structure.py  fix_code_warnings.py  fix_markdown.py
(+13 files in other folders)
