[package]
name = "lore-engine"
version = "0.1.0"
edition = "2021"
description = "High-performance hybrid Rust+Python engine for intelligent agent simulation"
authors = ["Lore N.A. Team"]
license = "MIT"
repository = "https://github.com/lore-na/lore-engine"
keywords = ["ai", "agents", "simulation", "genetics", "neural-networks"]
categories = ["science", "simulation"]

[lib]
name = "lore_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
rayon = "1.8"
rand = "0.8"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.6", features = ["v4", "serde"] }
ordered-float = { version = "4.2", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
ndarray = "0.15"
approx = "0.5"
thiserror = "1.0"
num_cpus = "1.0"

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"

[[bench]]
name = "genetic_bench"
harness = false

[[bench]]
name = "neural_bench"
harness = false
